add: 埋め込み対応用のメタタグを追加

--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ description = ""
 
 [languages.ja]
 title = "blog.h4y4bus4.com"
-description = ""
+description = "いつかつよつよエンジニアになりたい銀髪少女です。夜型です。"
 
 [markdown]
 render_emoji = true
